docs/cilium/other/hubble-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cilium-hubble-ui-https
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik-master-lb"
    traefik.ingress.kubernetes.io/router.entrypoints: "traefik-websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ns-traefik-master-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik-master-lb
  tls:
    - hosts:
        - cilium-hubble-ui-k8s.my-domain.com
      secretName: cert-cilium-hubble-ui
  rules:
    - host: cilium-hubble-ui-k8s.my-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
